[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/PixelArt/digger.png" type="Texture" id=1]
[ext_resource path="res://Digger.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Hitbox.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.24997

[node name="PlayerDigger" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
z_index = 5
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=["Projectile"]]
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.588235, 0.521569, 0.521569, 1 )
rotation = 1.5708
scale = Vector2( 0.699999, 1.15 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 4 )
damage = 0

[connection signal="area_entered" from="." to="." method="_on_PlayerDigger_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerDigger_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
